<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="470dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9">


        <EditText
            android:id="@+id/HomeSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="100dp"
            android:layout_weight="0.5"
            android:background="@color/cardview_shadow_end_color"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:ems="10"
            android:fontFamily="@font/capriola"
            android:foreground="@drawable/ic_launcher_background"
            android:freezesText="true"
            android:gravity="center"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:strokeColor="@color/black"
            app:strokeWidth="10dp"
            tools:visibility="visible">

        </EditText>

        <Button
            android:background = "@drawable/roundedbutton"
            android:id="@+id/HomeButton"
            android:layout_width="17dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textColor="@color/black"
            app:iconTint="#770B0B"
            app:strokeColor="@color/purple_500" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:id="@+id/HomeFindText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#431D780C"
            android:fallbackLineSpacing="false"
            android:fontFamily="@font/capriola"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/ress"
            android:textColor="#0F2E11"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HomeNameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/HomeFormText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/form"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/HomeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="linearLayout2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textColor="#D61B1B"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="28dp" />

</androidx.constraintlayout.widget.ConstraintLayout>