<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="dashboard"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/border"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/HomeFindText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/editbacklightgreen"
            android:fallbackLineSpacing="false"
            android:fontFamily="@font/pt_sans"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/drugfound"
            android:textAllCaps="true"
            android:textColor="#DA000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HomeNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:background="@drawable/editbacklightgreen"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:visibility="invisible" />

            <TextView
                android:id="@+id/HomeFormText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.55"
                android:background="@drawable/editbacklightgreen"
                android:fontFamily="@font/roboto_thin"
                android:gravity="center"
                android:paddingLeft="2dp"
                android:paddingRight="2dp"
                android:text="@string/form"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            tools:visibility="invisible" />

        <ListView
            android:id="@+id/HomeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>